--- a/static/style.css
+++ b/static/style.css
@@ -1,22 +1,91 @@
-* {
+body {
     margin: 0;
     padding: 0;
     vertical-align: baseline;
+    font-size: 18px;
+    background-color: #e9d697;
+    font-family: monospace;
 }
+h2 {
+    font-size: 1.25rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+h3 {
+    font-size: 2rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+.multiplayer-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+@media (min-width: 900px) {
+}
+
+button {
+    background-color: #fc7070;
+    border-radius: 25px;
+    padding: 5px 9px;
+}
+button.multiplayer {
+    font-size: 1.5rem;
+    border-radius: 15vw;
+    background-color: #cc2608;
+    padding: 3vw;
+    color: yellow;
+}
+
+button:focus {
+    outline: 0;
+}
+
 .board-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
 }
+
+@media (min-width: 900px) {
+    .board-container {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+    }
+}
+
 .dice-container {
     display: grid;
     grid-template-columns: 1fr;
-    overflow: hidden;
-    position: absolute;
-    top: 5vw;
-    left: 5vh;
-    height: 250px;
-    width: 250px;
+    height: 3vh;
+    width: 30vw;
+    transform: scale(0.5);
+}
+
+.board-svg {
+    width: 100vw;
+    height: 80vh;
+}
+
+@media (min-width: 900px) {
+    .board-svg {
+        width: 60vw;
+        height: 95vh;
+    }
+}
+
+@media (min-width: 900px) {
+    .dice-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 30vw;
+        width: 15vw;
+        transform: translateX(0) scale(1);
+    }
 }
 .dice {
     align-items: center;
@@ -44,7 +113,7 @@
     transition: transform 1.25s ease-out;
 }
 .die-item {
-    background-color: #fefefe;
+    background-color: #ffd138;
     box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
         inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
     display: grid;
